[CI] fix Java 21